--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: debian:bookworm-slim
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
