--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,7 +2,7 @@ name: Docker Build and Push
 
 on:
   issues:
-    types: [opened, edited]
+    types: [opened]
     labels: build
 
 jobs:
@@ -19,9 +19,9 @@ jobs:
     - name: Log in to Aliyun Container Registry
       uses: docker/login-action@v1
       with:
-        registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ secrets.ALIYUN_USERNAME }}
-        password: ${{ secrets.ALIYUN_PASSWORD }}
+        registry: ${{ secrets.DOCKER_REGISTRY}}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
