ci: 更新同步 Docker 镜像到阿里云仓库的 GitHub Action

--- a/.github/workflows/sync-image-api.yml
+++ b/.github/workflows/sync-image-api.yml
@@ -3,7 +3,7 @@ name: Sync Dokcer Image To Aliyun Repo By Api
 
 on:
   repository_dispatch:
-    types: sync-docker
+    types: [sync-docker]
 
 jobs:
   sync-task:
