--- a/.github/workflows/test-tmate.yaml
+++ b/.github/workflows/test-tmate.yaml
@@ -8,3 +8,4 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 15
